After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779071 - Missing ellipsizing in Printers panel
Missing ellipsizing in Printers panel
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Printers
git master
Other Linux
: Normal normal
: ---
Assigned To: Felipe Borges
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-22 14:30 UTC by Marek Kašík
Modified: 2017-02-26 11:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
printers: Ellipsize the "Details Dialog" title (3.72 KB, patch)
2017-02-22 15:43 UTC, Felipe Borges
committed Details | Review
printers: Ellipsize the "location" in the printer entry (1.66 KB, patch)
2017-02-22 15:43 UTC, Felipe Borges
committed Details | Review

Description Marek Kašík 2017-02-22 14:30:38 UTC
Location field in Printers panel is not ellipsized when the string is too long. Also the details dialog does not ellipsize its title when you want to rename printer.
Comment 1 Felipe Borges 2017-02-22 15:43:07 UTC
Created attachment 346454 [details] [review]
printers: Ellipsize the "Details Dialog" title

Printers with long names were causing the "Printer Details Dialog"
to expande horizontally.

This patch ellipsizes the custom title of the dialog.
Comment 2 Felipe Borges 2017-02-22 15:43:15 UTC
Created attachment 346455 [details] [review]
printers: Ellipsize the "location" in the printer entry

Long location names were causing the whole dialog to expand
horizontally.

This patch ellipsizes the "location" string just like the
other fields of a printer entry.
Comment 3 Marek Kašík 2017-02-22 16:59:42 UTC
Review of attachment 346455 [details] [review]:

Thank you for the patch. Please ask for UI freeze exception when applying to master branch.
Comment 4 Marek Kašík 2017-02-23 16:11:06 UTC
Review of attachment 346454 [details] [review]:

Thank you for the patch. Commit it once you will get freeze break exception.
Comment 5 Felipe Borges 2017-02-26 11:51:36 UTC
These UI freeze exceptions were authorized by the release-team
https://mail.gnome.org/archives/release-team/2017-February/msg00045.html

Attachment 346454 [details] pushed as 4cfb211 - printers: Ellipsize the "Details Dialog" title
Attachment 346455 [details] pushed as 1de145a - printers: Ellipsize the "location" in the printer entry